- Converted main(String{] to main(String... - Added Generator poc based on a virtual thread - Added latest-jdk module as module to parent after enable preview in surefire plugin